--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <h1> Deu bom?</h1>
+  <img src="libuv.png">
 </body>
 </html>
