--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,9 @@
 <body>
   <h1> Deu bom?</h1>
   <img src="libuv.png">
+
+  <form method="post">
+    <input type="submit" value="Enviar">
+  </form>
 </body>
 </html>
